syntax = "proto3";

package pd;

import "user.proto";
option go_package = "auth-service/pd";

message UserRequest {
  string username = 1;
  string email = 2;
  string phone = 3;
  string address = 4;
  string password = 5;
  string userType = 6;
}

message UserResponse {
  User user = 1;
}
